welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: unclosed character literal
      return '7:00'
             ^alarmClock:4: error: Non-zero integral values may not have a leading zero.
      return '7:00'
                ^alarmClock:4: error: unclosed character literal
      return '7:00'
                  ^alarmClock:7: error: unclosed character literal
      return '10h00'
             ^alarmClock:7: error: Invalid literal number
      return '10h00'
               ^alarmClock:7: error: unclosed character literal
      return '10h00'
                   ^alarmClock:11: error: unclosed character literal
    return '10h00'
           ^alarmClock:11: error: Invalid literal number
    return '10h00'
             ^alarmClock:11: error: unclosed character literal
    return '10h00'
                 ^alarmClock:4: error: ';' expected but something found.
      return '7:00'
             ^alarmClock:7: error: ';' expected but something found.
      return '10h00'
             ^alarmClock:11: error: ';' expected but something found.
    return '10h00'
           ^